--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,37 +4,16 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="/text/assets/styles/stylesheet.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="/text/assets/styles/github-dark.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="/text/assets/styles/print.css" media="print">
+    <link rel="stylesheet" type="text/css" href="/stylesheet.css" media="screen">
 
-    <title>{{ page.title }} - @yoshiki_utakata</title>
+    <title>{{ page.title }}</title>
   </head>
 
   <body>
 
-    <header>
-      <div class="container">
-        <h1>
-        	<a href="http://yoshikyoto.github.io/text/">
-        		@yoshiki_utakata
-        	</a>
-       	</h1>
-        <h2>yoshiki_utakataの知見とか知識とかをまとめていきます</h2>
-
-        <section id="downloads">
-          <!-- <a href="https://github.com/yoshikyoto/text/zipball/master" class="btn">Download as .zip</a> -->
-          <!-- <a href="https://github.com/yoshikyoto/text/tarball/master" class="btn">Download as .tar.gz</a> -->
-          <a href="https://github.com/yoshikyoto/text" class="btn btn-github">
-	    <span class="icon"></span>View on GitHub
-	  </a>
-        </section>
-      </div>
-    </header>
-
     <div class="container">
       <section id="main_content">
-	{{ content }}
+        {{ content }}
       </section>
     </div>
 
