--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/wordpress-document/assets/css/style.css" media="screen">
 
     <title>{{ page.title }}</title>
   </head>
