レイアウトのcssの追加

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,17 @@
   </head>
 
   <body>
-
+    <header class="siteHeader">
+      <img src="images/wpuser.png" alt="WordPress User Document" title="WordPress User Document">
+    </header>
     <div class="container">
       <section id="main_content">
         {{ content }}
       </section>
     </div>
+    <footer>
+      <a href="https://github.com/wckansai2016/wordpress-document">github</a>
+    </footer>
 
     
   </body>
