--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,17 @@
-html, body{
-margin: 0;
-padding: 0;
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+img{
+  max-width:100%;
+  height: auto;
+}
+.siteHeader {
+  text-align: center;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
 }
