--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="siteHeader">
-      <img src="images/wpuser.png" alt="WordPress User Document" title="WordPress User Document">
+      <img src="/wordpress-document/images/wpuser.png" alt="WordPress User Document" title="WordPress User Document">
     </header>
     <div class="container">
       <section id="main_content">
