フッターデザイン

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         {{ content }}
       </section>
     </div>
-    <footer>
+    <footer class"siteFooter">
       <a href="https://github.com/wckansai2016/wordpress-document">github</a>
     </footer>
 
