ヘッダーにライン

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,16 @@ body {
   margin: 0;
   padding: 0;
 }
-img{
-  max-width:100%;
+
+img {
+  max-width: 100%;
   height: auto;
 }
+
 .siteHeader {
   text-align: center;
+  border-top: 1px solid #ccc;
+  padding: 20px 0;
 }
 
 .container {
@@ -16,7 +20,7 @@ img{
   margin: 0 auto;
 }
 
-.siteFooter{
+.siteFooter {
   text-align: center;
   border-top: 1px solid #ccc;
   padding: 20px 0;
