--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ img {
 
 .siteHeader {
   text-align: center;
-  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
   padding: 20px 0;
 }
 
