--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="siteHeader">
-      <a href="https://wckansai2016.github.io/wordpress-document/"></a><img src="/wordpress-document/images/wpuser.png" alt="WordPress User Document" title="WordPress User Document">
+      <a href="https://wckansai2016.github.io/wordpress-document/"><img src="/wordpress-document/images/wpuser.png" alt="WordPress User Document" title="WordPress User Document"></a>
     </header>
     <div class="container">
       <section id="main_content">
