red carpet を指定しない fixed #56 / テンプレートからの相対リンクに baseurl を使う

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,14 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="/wordpress-document/assets/css/style.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css" media="screen">
 
     <title>{{ page.title }}</title>
   </head>
 
   <body>
     <header class="siteHeader">
-      <a href="https://wckansai2016.github.io/wordpress-document/"><img src="/wordpress-document/images/wpuser.png" alt="WordPress User Document" title="WordPress User Document"></a>
+      <a href="https://wckansai2016.github.io/wordpress-document/"><img src="{{ site.baseurl }}/images/wpuser.png" alt="WordPress User Document" title="WordPress User Document"></a>
     </header>
     <div class="container">
       <section id="main_content">
