GitHub は G と H が大文字です。

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       </section>
     </div>
     <footer class="siteFooter">
-      <a href="https://github.com/wckansai2016/wordpress-document">github</a>
+      <a href="https://github.com/wckansai2016/wordpress-document">GitHub で見る</a>
     </footer>
 
     
