左側にナビゲーションを付与

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,33 @@
     <header class="siteHeader">
       <a href="https://wckansai2016.github.io/wordpress-document/"><img src="{{ site.baseurl }}/images/wpuser.png" alt="WordPress User Document" title="WordPress User Document"></a>
     </header>
-    <div class="container">
-      <section id="main_content">
+    <div class="container cf">
+      <section id="main_content" class="main_content">
         {{ content }}
       </section>
+      <nav class="contentNav">
+        <ol>
+          <li><a href="https://wckansai2016.github.io/wordpress-document/1_login/index.html">ログイン</a></li>
+          <li><a href="https://wckansai2016.github.io/wordpress-document/2_toukou/index.html">投稿</a>
+            <ul>
+              <li><a href="https://wckansai2016.github.io/wordpress-document/2_toukou/index-1.html">見出し</a></li>
+              <li><a href="https://wckansai2016.github.io/wordpress-document/2_toukou/index-2.html">画像を添付</a></li>
+              <li><a href="https://wckansai2016.github.io/wordpress-document/2_toukou/3_category.html">カテゴリ追加</a></li>
+              <li><a href="https://wckansai2016.github.io/wordpress-document/2_toukou/4_tag.html">タグの付与</a></li>
+              <li><a href="https://wckansai2016.github.io/wordpress-document/2_toukou/5_eyecatch.html">アイキャッチ追加</a></li>
+            </ul>
+          </li>
+          <li><a href="https://wckansai2016.github.io/wordpress-document/3_kotei/index.html">固定ページ</a></li>
+          <li><a href="https://wckansai2016.github.io/wordpress-document/4_gaikan/index.html">外観</a></li>
+          <li><a href="https://wckansai2016.github.io/wordpress-document/5_plugin/index.html">プラグイン</a>
+            <ul>
+              <li><a href="https://wckansai2016.github.io/wordpress-document/5_plugin/index-1.html">プラグイン</a></li>
+            </ul></li>
+          <li><a href="https://wckansai2016.github.io/wordpress-document/6_user/index.html">ユーザ</a></li>
+          <li><a href="https://wckansai2016.github.io/wordpress-document/7_settei/index.html">設定</a></li>
+          <li><a href="https://wckansai2016.github.io/wordpress-document/8_update/index.html">アップデート</a></li>
+        </ol>
+      </nav>
     </div>
     <footer class="siteFooter">
       <a href="https://github.com/wckansai2016/wordpress-document">GitHub で見る</a>
