--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ img {
 .container {
   max-width: 960px;
   margin: 0 auto;
+  padding: 0 10px;
 }
 
 .siteFooter {
@@ -57,7 +58,7 @@ img {
   .main_content{
     float: right;
     width: 75%;
-    padding-left: 20px;
+    padding-left: 10px;
     border-left: 1px solid #ccc;
   }
 }
