--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 
   <body>
     <header class="siteHeader">
-      <a href="https://wckansai2016.github.io/wordpress-document/"><img src="{{ site.baseurl }}/images/wpuser.png" alt="WordPress User Document" title="WordPress User Document"></a>
+      <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/wpuser.png" alt="WordPress User Document" title="WordPress User Document"></a>
     </header>
     <div class="container cf">
       <section id="main_content" class="main_content">
@@ -19,25 +19,25 @@
       </section>
       <nav class="contentNav">
         <ol>
-          <li><a href="https://wckansai2016.github.io/wordpress-document/1_login/index.html">ログイン</a></li>
-          <li><a href="https://wckansai2016.github.io/wordpress-document/2_toukou/index.html">投稿</a>
+          <li><a href="{{ site.baseurl }}/1_login/index.html">ログイン</a></li>
+          <li><a href="{{ site.baseurl }}/2_toukou/index.html">投稿</a>
             <ul>
-              <li><a href="https://wckansai2016.github.io/wordpress-document/2_toukou/index-1.html">見出し</a></li>
-              <li><a href="https://wckansai2016.github.io/wordpress-document/2_toukou/index-2.html">画像を添付</a></li>
-              <li><a href="https://wckansai2016.github.io/wordpress-document/2_toukou/3_category.html">カテゴリ追加</a></li>
-              <li><a href="https://wckansai2016.github.io/wordpress-document/2_toukou/4_tag.html">タグの付与</a></li>
-              <li><a href="https://wckansai2016.github.io/wordpress-document/2_toukou/5_eyecatch.html">アイキャッチ追加</a></li>
+              <li><a href="{{ site.baseurl }}/2_toukou/index-1.html">見出し</a></li>
+              <li><a href="{{ site.baseurl }}/2_toukou/index-2.html">画像を添付</a></li>
+              <li><a href="{{ site.baseurl }}/2_toukou/3_category.html">カテゴリ追加</a></li>
+              <li><a href="{{ site.baseurl }}/2_toukou/4_tag.html">タグの付与</a></li>
+              <li><a href="{{ site.baseurl }}/2_toukou/5_eyecatch.html">アイキャッチ追加</a></li>
             </ul>
           </li>
-          <li><a href="https://wckansai2016.github.io/wordpress-document/3_kotei/index.html">固定ページ</a></li>
-          <li><a href="https://wckansai2016.github.io/wordpress-document/4_gaikan/index.html">外観</a></li>
-          <li><a href="https://wckansai2016.github.io/wordpress-document/5_plugin/index.html">プラグイン</a>
+          <li><a href="{{ site.baseurl }}/3_kotei/index.html">固定ページ</a></li>
+          <li><a href="{{ site.baseurl }}/4_gaikan/index.html">外観</a></li>
+          <li><a href="{{ site.baseurl }}/5_plugin/index.html">プラグイン</a>
             <ul>
-              <li><a href="https://wckansai2016.github.io/wordpress-document/5_plugin/index-1.html">プラグイン</a></li>
+              <li><a href="{{ site.baseurl }}/5_plugin/index-1.html">プラグイン</a></li>
             </ul></li>
-          <li><a href="https://wckansai2016.github.io/wordpress-document/6_user/index.html">ユーザ</a></li>
-          <li><a href="https://wckansai2016.github.io/wordpress-document/7_settei/index.html">設定</a></li>
-          <li><a href="https://wckansai2016.github.io/wordpress-document/8_update/index.html">アップデート</a></li>
+          <li><a href="{{ site.baseurl }}/6_user/index.html">ユーザ</a></li>
+          <li><a href="{{ site.baseurl }}/7_settei/index.html">設定</a></li>
+          <li><a href="{{ site.baseurl }}/8_update/index.html">アップデート</a></li>
         </ol>
       </nav>
     </div>
@@ -47,6 +47,6 @@
       <a href="https://github.com/wckansai2016/wordpress-document">GitHub で見る</a>
     </footer>
 
-    
+
   </body>
 </html>
