Remove `index.html`

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
       </section>
       <nav class="contentNav">
         <ol>
-          <li><a href="{{ site.baseurl }}/1_login/index.html">ログイン</a></li>
-          <li><a href="{{ site.baseurl }}/2_toukou/index.html">投稿</a>
+          <li><a href="{{ site.baseurl }}/1_login/">ログイン</a></li>
+          <li><a href="{{ site.baseurl }}/2_toukou/">投稿</a>
             <ul>
               <li><a href="{{ site.baseurl }}/2_toukou/index-1.html">見出し</a></li>
               <li><a href="{{ site.baseurl }}/2_toukou/index-2.html">画像を添付</a></li>
@@ -29,15 +29,15 @@
               <li><a href="{{ site.baseurl }}/2_toukou/5_eyecatch.html">アイキャッチ追加</a></li>
             </ul>
           </li>
-          <li><a href="{{ site.baseurl }}/3_kotei/index.html">固定ページ</a></li>
-          <li><a href="{{ site.baseurl }}/4_gaikan/index.html">外観</a></li>
-          <li><a href="{{ site.baseurl }}/5_plugin/index.html">プラグイン</a>
+          <li><a href="{{ site.baseurl }}/3_kotei/">固定ページ</a></li>
+          <li><a href="{{ site.baseurl }}/4_gaikan/">外観</a></li>
+          <li><a href="{{ site.baseurl }}/5_plugin/">プラグイン</a>
             <ul>
               <li><a href="{{ site.baseurl }}/5_plugin/index-1.html">プラグイン</a></li>
             </ul></li>
-          <li><a href="{{ site.baseurl }}/6_user/index.html">ユーザ</a></li>
-          <li><a href="{{ site.baseurl }}/7_settei/index.html">設定</a></li>
-          <li><a href="{{ site.baseurl }}/8_update/index.html">アップデート</a></li>
+          <li><a href="{{ site.baseurl }}/6_user/">ユーザ</a></li>
+          <li><a href="{{ site.baseurl }}/7_settei/">設定</a></li>
+          <li><a href="{{ site.baseurl }}/8_update/">アップデート</a></li>
         </ol>
       </nav>
     </div>
