Use site.baseurl

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
       <a href="https://github.com/{{ site.github.id }}/{{ site.github.repo }}">GitHub で見る</a>
     </footer>
 
-    <script type="riot/tag" src="/wordpress-document/assets/js/contributors.tag"></script>
+    <script type="riot/tag" src="{{ site.baseurl }}/assets/js/contributors.tag"></script>
     <script>
       riot.mount('contributors');
     </script>
