--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,9 @@ img {
     float: left;
     width: 25%;
     border-top: none;
+    border-right: 1px solid #ccc;
+    margin-left: 1px;
+    margin-right: -1px;
   }
 
   .main_content{
