Move all images into assets directory. fix #82

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
   <body>
     <header class="siteHeader">
-      <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/images/wpuser.png" alt="WordPress User Document" title="WordPress User Document"></a>
+      <a href="{{ site.baseurl }}/"><img src="{{ site.baseurl }}/assets/images/wpuser.png" alt="WordPress User Document" title="WordPress User Document"></a>
     </header>
     <div class="container cf">
       <section id="main_content" class="main_content">
