--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,6 @@ img {
 
 .siteHeader {
   text-align: center;
-  border-bottom: 1px solid #ccc;
   padding: 20px 0;
 }
 
@@ -50,7 +49,25 @@ img {
 }
 
 .contentNav{
-  border-top: 1px solid #ccc;
+  ol{
+    li{
+      list-style-position: inside;
+      border-bottom: 1px solid #ddd;
+      a{
+        display: block;
+        padding: 0.5em 0;
+        &:hover{
+          background: #ddd;
+        }
+      }
+      ul{
+        li{
+          list-style-position: outside;
+          border-bottom: 0;
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: 800px) {
