左ナビの文言修正

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
             <ul>
               <li><a href="{{ site.baseurl }}/2_toukou/index-1.html">見出し</a></li>
               <li><a href="{{ site.baseurl }}/2_toukou/index-2.html">画像を添付</a></li>
-              <li><a href="{{ site.baseurl }}/2_toukou/3_category.html">カテゴリ追加</a></li>
+              <li><a href="{{ site.baseurl }}/2_toukou/3_category.html">カテゴリー追加</a></li>
               <li><a href="{{ site.baseurl }}/2_toukou/4_tag.html">タグの付与</a></li>
               <li><a href="{{ site.baseurl }}/2_toukou/5_eyecatch.html">アイキャッチ追加</a></li>
             </ul>
