「ユーザ」を「ユーザー」に変更

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
             <ul>
               <li><a href="{{ site.baseurl }}/5_plugin/index-1.html">プラグイン</a></li>
             </ul></li>
-          <li><a href="{{ site.baseurl }}/6_user/">ユーザ</a></li>
+          <li><a href="{{ site.baseurl }}/6_user/">ユーザー</a></li>
           <li><a href="{{ site.baseurl }}/7_settei/">設定について</a></li>
           <li><a href="{{ site.baseurl }}/8_update/">アップデート</a></li>
         </ol>
