--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -77,6 +77,12 @@ img {
     border-radius: 6px;
     padding: 0.2em 0.6em;
   }
+  code{
+    padding: 2px 5px;
+    color: #099;
+    background: #F0F9F9;
+    border-radius: 3px;
+  }
 }
 
 @media (min-width: 800px) {
