dashicons.css を読み込み

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/style.css" media="screen">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/riot/2.5.0/riot+compiler.min.js'></script>
+    <link href="https://s.w.org/wp-includes/css/dashicons.css?20170917" rel="stylesheet" type="text/css" />
     <title>{{ page.title }}</title>
   </head>
 
