変更前：プラグイン→変更後：プラグイン追加

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
           <li><a href="{{ site.baseurl }}/4_gaikan/">外観</a></li>
           <li><a href="{{ site.baseurl }}/5_plugin/">プラグイン</a>
             <ul>
-              <li><a href="{{ site.baseurl }}/5_plugin/index-1.html">プラグイン</a></li>
+              <li><a href="{{ site.baseurl }}/5_plugin/index-1.html">プラグイン追加</a></li>
             </ul></li>
           <li><a href="{{ site.baseurl }}/6_user/">ユーザー</a></li>
           <li><a href="{{ site.baseurl }}/7_settei/">設定について</a></li>
