--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       </section>
       <nav class="contentNav">
         <ol>
-          <li><a href="{{ site.baseurl }}/1_login/"><div class="wp-menu-image dashicons-before dashicons-admin-settings"><br></div><div class="wp-menu-name">ログイン</div></a></li>
+          <li><a href="{{ site.baseurl }}/1_login/"><div class="wp-menu-image dashicons-before dashicons-admin-network"><br></div><div class="wp-menu-name">ログイン</div></a></li>
           <li><a href="{{ site.baseurl }}/2_toukou/"><div class="wp-menu-image dashicons-before dashicons-admin-post"><br></div><div class="wp-menu-name">投稿</div></a>
             <ul>
               <li><a href="{{ site.baseurl }}/2_toukou/index-1.html">見出し</a></li>
@@ -39,7 +39,7 @@
             </ul></li>
           <li><a href="{{ site.baseurl }}/6_user/"><div class="wp-menu-image dashicons-before dashicons-admin-users"><br></div><div class="wp-menu-name">ユーザー</div></a></li>
           <li><a href="{{ site.baseurl }}/7_settei/"><div class="wp-menu-image dashicons-before dashicons-admin-settings"><br></div><div class="wp-menu-name">設定について</div></a></li>
-          <li><a href="{{ site.baseurl }}/8_update/"><div class="wp-menu-image dashicons-before dashicons-admin-settings"><br></div><div class="wp-menu-name">アップデート</div></a></li>
+          <li><a href="{{ site.baseurl }}/8_update/"><div class="wp-menu-image dashicons-before dashicons-update"><br></div><div class="wp-menu-name">アップデート</div></a></li>
         </ol>
       </nav>
     </div>
