メニュー変更

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,11 @@
       <nav class="contentNav">
         <ol>
           <li><a href="{{ site.baseurl }}/1_login/"><div class="wp-menu-image dashicons-before dashicons-admin-network"><br></div><div class="wp-menu-name">ログイン</div></a></li>
+          <li><a href="{{ site.baseurl }}/9_dashboard/"><div class="wp-menu-image dashicons-before dashicons-dashboard"><br></div><div class="wp-menu-name">ダッシュボード</div></a>
+            <ul>
+              <li><a href="{{ site.baseurl }}/8_update/">更新（アップデート）</a></li>
+            </ul>
+          </li>
           <li><a href="{{ site.baseurl }}/2_toukou/"><div class="wp-menu-image dashicons-before dashicons-admin-post"><br></div><div class="wp-menu-name">投稿</div></a>
             <ul>
               <li><a href="{{ site.baseurl }}/2_toukou/index-2.html">画像を添付</a></li>
@@ -31,15 +36,18 @@
               <li><a href="{{ site.baseurl }}/2_toukou/5_eyecatch.html">アイキャッチ追加</a></li>
             </ul>
           </li>
+          <li><a href="{{ site.baseurl }}/1_login/"><div class="wp-menu-image dashicons-before dashicons-admin-media"><br></div><div class="wp-menu-name">メディア</div></a></li>
           <li><a href="{{ site.baseurl }}/3_kotei/"><div class="wp-menu-image dashicons-before dashicons-admin-page"><br></div><div class="wp-menu-name">固定ページ</div></a></li>
+          <li><a href="{{ site.baseurl }}/3_kotei/"><div class="wp-menu-image dashicons-before dashicons-admin-comments"><br></div><div class="wp-menu-name">コメント</div></a></li>
           <li><a href="{{ site.baseurl }}/4_gaikan/"><div class="wp-menu-image dashicons-before dashicons-admin-appearance"><br></div><div class="wp-menu-name">外観</div></a></li>
           <li><a href="{{ site.baseurl }}/5_plugin/"><div class="wp-menu-image dashicons-before dashicons-admin-plugins"><br></div><div class="wp-menu-name">プラグイン</div></a>
             <ul>
               <li><a href="{{ site.baseurl }}/5_plugin/index-1.html">プラグイン追加</a></li>
-            </ul></li>
+            </ul>
+          </li>
           <li><a href="{{ site.baseurl }}/6_user/"><div class="wp-menu-image dashicons-before dashicons-admin-users"><br></div><div class="wp-menu-name">ユーザー</div></a></li>
-          <li><a href="{{ site.baseurl }}/7_settei/"><div class="wp-menu-image dashicons-before dashicons-admin-settings"><br></div><div class="wp-menu-name">設定について</div></a></li>
-          <li><a href="{{ site.baseurl }}/8_update/"><div class="wp-menu-image dashicons-before dashicons-update"><br></div><div class="wp-menu-name">アップデート</div></a></li>
+          <li><a href="{{ site.baseurl }}/6_user/"><div class="wp-menu-image dashicons-before dashicons-admin-tools"><br></div><div class="wp-menu-name">ツール</div></a></li>
+          <li><a href="{{ site.baseurl }}/7_settei/"><div class="wp-menu-image dashicons-before dashicons-admin-settings"><br></div><div class="wp-menu-name">設定</div></a></li>
         </ol>
       </nav>
     </div>
