--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,8 @@
             <ul>
               <li><a href="{{ site.baseurl }}/2_toukou/index-2.html">画像を添付</a></li>
               <li><a href="{{ site.baseurl }}/2_toukou/3_category.html">カテゴリー追加</a></li>
-              <li><a href="{{ site.baseurl }}/2_toukou/4_tag.html">タグの付与</a></li>
+              <li><a href="{{ site.baseurl }}/2_toukou/4_tag_block.html">タグの付与</a></li>
+							<li><a href="{{ site.baseurl }}/2_toukou/4_tag.html">タグの付与（クラシックエディタ）</a></li>
               <li><a href="{{ site.baseurl }}/2_toukou/5_eyecatch.html">アイキャッチ追加</a></li>
             </ul>
           </li>
